Fix button overlap with new ui

--- a/templates/qmn_primary.css
+++ b/templates/qmn_primary.css
@@ -352,26 +352,28 @@ label.inline .mlw_qmn_question,
   background: #666;
 }
 
-.qmn_pagination {
+.qmn_pagination, .qsm_auto_pagination_enabled .qmn_pagination {
   position: relative;
   display: flex;
   align-items: start;
   flex-direction: row-reverse;
   padding: 15px 0 15px 0;
   flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.qmn_pagination .mlw_next, .qmn_pagination .qsm-submit-btn {
-  margin: 0 0 0 auto;
+  justify-content: center;
+  width: 100% !important;
+  margin: 3px;
 }
 
 .qmn_pagination :nth-child(0) { order: 0; }
 .qmn_pagination :nth-child(1) { order: 1; }
 .qmn_pagination :nth-child(2) { order: 2; }
 
+.qsm_auto_pagination_enabled .qmn_pagination  :nth-child(5) { order: 0; }
+.qsm_auto_pagination_enabled .qmn_pagination  :nth-child(6) { order: 1; }
+.qsm_auto_pagination_enabled .qmn_pagination  :nth-child(7) { order: 2; }
+
 @media screen and (min-width: 500px) {
-  .qmn_pagination {
+  .qmn_pagination, .qsm_auto_pagination_enabled .qmn_pagination {
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
@@ -380,6 +382,9 @@ label.inline .mlw_qmn_question,
   .qmn_pagination :nth-child(0) { order: initial; }
   .qmn_pagination :nth-child(1) { order: initial; }
   .qmn_pagination :nth-child(2) { order: initial; }
+  .qsm_auto_pagination_enabled .qmn_pagination  :nth-child(5) { order: initial; }
+  .qsm_auto_pagination_enabled .qmn_pagination  :nth-child(6) { order: initial; }
+  .qsm_auto_pagination_enabled .qmn_pagination  :nth-child(7) { order: initial; }
 }
 
 .mlw_qmn_timer {
